Added navigation links and styling

--- a/components/header.html
+++ b/components/header.html
@@ -1,9 +1,11 @@
 <div class="header">
     <p>Logo</p>
-    <div>
-        <button>Jetzt buchen</button>
-        <button>Über uns</button>
-        <p>Tel.</p>
-        <p>Email</p>
-    </div>
+    <nav>
+        <a href="" class="nav-links" draggable="false">Jetzt buchen</a>
+        <a href="" class="nav-links" draggable="false">Über uns</a>
+        <div>
+            <p>Tel.</p>
+            <p>Email</p>
+        </div>
+    </nav>
 </div>
