--- a/css/header.css
+++ b/css/header.css
@@ -11,3 +11,15 @@
     align-items: center;
     box-shadow: 0rem 1rem 2rem .1rem rgb(162, 162, 162);
 }
+
+nav {
+    display: flex;
+    gap: 6rem;
+    align-items: center;
+}
+
+.nav-links {
+    color: black;
+    text-decoration: none;
+    user-select: none;
+}
