--- a/components/header.html
+++ b/components/header.html
@@ -1,4 +1,5 @@
-<div class="header">
+<link rel="stylesheet" href="css/header.css">
+<header>
     <p>Logo</p>
     <nav>
         <a href="" class="nav-links" draggable="false">Jetzt buchen</a>
@@ -8,4 +9,4 @@
             <p>Email</p>
         </div>
     </nav>
-</div>
+</header>
