--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-.header {
+header {
     width: 100vw;
     height: 15vh;
     min-height: 6rem;
@@ -10,6 +10,9 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 0rem 1rem 2rem .1rem rgb(162, 162, 162);
+    position: fixed;
+    top: 0;
+
 }
 
 nav {
