--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="css/header.css">
 <header>
-    <p>Logo</p>
+    <img src="http://localhost:8888/reisebuero/resources/logo.png" alt="Logo" class="logo">
     <nav>
         <a href="" class="nav-links" draggable="false">Jetzt buchen</a>
         <a href="" class="nav-links" draggable="false">Über uns</a>
