Added email and tel

--- a/components/header.html
+++ b/components/header.html
@@ -5,8 +5,8 @@
         <a href="" class="nav-links" draggable="false">Jetzt buchen</a>
         <a href="" class="nav-links" draggable="false">Über uns</a>
         <div>
-            <p>Tel.</p>
-            <p>Email</p>
+            <p>+41 52 434 54 11</p>
+            <p>reisebüro-noscam@gmail.com</p>
         </div>
     </nav>
 </header>
