Imageslider erstellt für homepage

--- a/components/header.html
+++ b/components/header.html
@@ -2,8 +2,8 @@
 <header>
     <img src="resources/logo.png" alt="Logo" class="logo">
     <nav>
-        <a href="" class="nav-links" draggable="false">Jetzt buchen</a>
-        <a href="" class="nav-links" draggable="false">Über uns</a>
+        <a href="" class="nav-links" draggable="false">book now</a>
+        <a href="" class="nav-links" draggable="false">about us</a>
         <div>
             <p>+41 52 434 54 11</p>
             <p>reisebüro-noscam@gmail.com</p>
