--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,5 +1,50 @@
 @import "./globals.css";
 
 main {
-    margin-top: var(--header-size);
+    margin-top: var(--header-size)*0.75;
+    z-index: 0;
+    
+}
+
+.slide-image {
+
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
+}
+
+.slider {
+    display: flex;
+    aspect-ratio: 16/9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0,0%,0%,0.25);
+}
+
+.slider-nav{
+    display: flex;
+    column-gap: 1rem;
+    position:absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.slider-nav a{
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: #ffff;
+    opacity: 0.75;
+    transition: opacity ease 100ms;
+}
+.slider-nav a:hover{
+    opacity: 1;
+
+}
+.slider-wrapper{
+
+
 }
