Added Google Maps API and first hotel

--- a/components/header.html
+++ b/components/header.html
@@ -2,7 +2,7 @@
 <header>
     <img src="http://localhost:8888/reisebuero/resources/logo.png" alt="Logo" class="logo">
     <nav>
-        <a href="" class="nav-links" draggable="false">Jetzt buchen</a>
+        <a href="hotel_selection.php" class="nav-links" draggable="false">Jetzt buchen</a>
         <a href="" class="nav-links" draggable="false">Über uns</a>
         <div>
             <p>+41 52 434 54 11</p>
