Added literally one text. Also fixxed minor stuff

--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="css/header.css">
 <header>
-    <img src="resources/logo.png" alt="Logo" class="logo" draggable="false" onclick="window.location.href = '../index.php'">
+    <img src="resources/logo.png" alt="Logo" class="logo" draggable="false" onclick="window.location.href = './'">
     <nav>
         <a href="" class="nav-links" draggable="false">Book now</a>
         <a href="" class="nav-links" draggable="false">About us</a>
