--- a/css/homepage.css
+++ b/css/homepage.css
@@ -26,25 +26,23 @@ main {
     display: flex;
     column-gap: 1rem;
     position:absolute;
-    bottom: 1.25rem;
+    bottom: 4rem;
     left: 50%;
     transform: translateX(-50%);
+    color: #387c00;
     z-index: 1;
 }
 
 .slider-nav a{
-    width: 0.5rem;
-    height: 0.5rem;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
-    background-color: #ffff;
+    background-color: #204700;
     opacity: 0.75;
-    transition: opacity ease 100ms;
+    transition: opacity ease 80ms;
 }
 .slider-nav a:hover{
     opacity: 1;
 
 }
-.slider-wrapper{
 
-
-}
