--- a/css/forms.css
+++ b/css/forms.css
@@ -1,8 +1,58 @@
-form {
+@import "./globals.css";
+
+body {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(239, 239, 239);
 }
+
+.form-container {
+    margin-top: var(--header-size);
+    min-width: 30rem;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 .1rem 5rem .1rem rgb(214, 214, 214);
+    padding: 2.5rem;
+    border-radius: .7rem;
+}
+
+form {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 1rem;
+}
+
 input {
     width: 10rem;
+    height: 2rem;
+    border: .125rem solid black;
+    border-radius: .25rem;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+}
+
+label {
+    display: flex;
+    justify-self: center;
+    align-self: center;
+}
+
+#submit-button {
+    border: none;
+    width: 6rem;
+    height: 2rem;
+    background-color: rgb(209, 209, 209);
+    transition: 100ms ease-in;
+    grid-column: span 2;
+    justify-items: center;
+    align-content: center;
+}
+
+#submit-button:hover {
+    background-color: var(--accent-color);
+    color: white;
 }
