--- a/components/Infotext.html
+++ b/components/Infotext.html
@@ -18,10 +18,14 @@
             <p>Our founding team of four has founded the company with the goal to provide the best vacations there are.</p>
             <p>Around the world we have build hotels to offer a great range of locations so everyone should find their need met in some way. This was only possible</p>
             <p>because of our numerous sponsors, the great support, underpaid child workers and our will to not give up. </p>
-            <p>To learn more about our journey, click here</p></Info>
+            <p>To learn more about our journey, click below.</p></Info>
 
         <nav2>
             <a href="" class="nav2-links" draggable="false">About us</a>
         </nav2>
+        <div class="image-container">
+            <img src="resources/HomepageImage.jpg" style="width: 30vw;" alt="Description of the image">
+          </div>
+        
 
 </Infotext>
