Added the about us section with some text

--- a/components/Infotext.html
+++ b/components/Infotext.html
@@ -4,7 +4,8 @@
     <Info> <p>We at Touch-Grass vacations believe that every individual, no matter their wealth or social status,</p>
         <p>deserves the right vacations they desire. We provide a great variety of options for your perfect break from the everyday stress.</p>
         <p>We assure you that you can reach your ideal destination </p>
-        <p>and it's just one click away.</p></Info>
+        <p>and it's just one click away.</p>
+        </Info>
 
         <nav2>
             <a href="" class="nav2-links" draggable="false">Book now</a>
@@ -18,10 +19,11 @@
             <p>Our founding team of four has founded the company with the goal to provide the best vacations there are.</p>
             <p>Around the world we have build hotels to offer a great range of locations so everyone should find their need met in some way. This was only possible</p>
             <p>because of our numerous sponsors, the great support, underpaid child workers and our will to not give up. </p>
-            <p>To learn more about our journey, click below.</p></Info>
+            <p>To learn more about our journey, click below.</p>
+            </Info>
 
         <nav2>
-            <a href="" class="nav2-links" draggable="false">About us</a>
+            <a href="./about-us.php" draggable="false">About us</a>
         </nav2>
         <div class="image-container">
             <img src="resources/HomepageImage.jpg" style="width: 30vw;" alt="Description of the image">
