--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,7 @@
     <img src="resources/logo.png" alt="Logo" class="logo" draggable="false" onclick="window.location.href = './'">
     <nav>
         <a href="" class="nav-links" draggable="false">Book now</a>
-        <a href="" class="nav-links" draggable="false">About us</a>
+        <a href="./about-us.php" class="nav-links" draggable="false">About us</a>
         <div>
             <p>+41 52 434 54 11</p>
             <p>reisebüro-noscam@gmail.com</p>
