--- a/css/Texts_hp2.css
+++ b/css/Texts_hp2.css
@@ -17,15 +17,14 @@ Info {
     }
 
     nav2 {
+        margin: 5rem;
         left:25%;
         text-align: center;
         position: relative;
         width: 50vw;
         height: 56px;
-        line-height: 56px;
         border-top: 2px solid rgb(120,120,120);
         border-bottom: 2px solid rgb(120,120,120);
-        gap: 6rem;
         display: flex;
         align-items: center;
     }
