--- a/components/Infotext.html
+++ b/components/Infotext.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="css/Texts_hp2.css">
 <Infotext>
 
-    <Info> <p>We at Touch-Grass vacations believe that every individual, no matter their wealth or social status,</p>
-        <p>deserves the right vacations they desire. We provide a great variety of options for your perfect break from the everyday stress.</p>
+    <Info> <p>We at Touch-Grass vacations believe that every individual, no matter their wealth or social status, deserves the right vacations they desire. </p>
+        <p>We provide a great variety of options for your perfect break from the everyday stress.</p>
         <p>We assure you that you can reach your ideal destination </p>
         <p>and it's just one click away.</p>
         </Info>
