--- a/components/footer.html
+++ b/components/footer.html
@@ -4,8 +4,8 @@
         <div>
             <p>+41 52 434 54 11</p>
             <p>reisebüro-noscam@gmail.com</p>
-            <p>founded 69.13.2023</p>
-            <p>EF Informatik 2024</p>
+            <p>founded 01.03.2024</p>
+            <p>KBW, EF Informatik 2024</p>
             <p>Andrin Halbeisen, Kilian Gross, Niklas Egger, Vladislav Lezov</p>
         </div>
     </footertexts>
