--- a/components/about-us.html
+++ b/components/about-us.html
@@ -3,7 +3,7 @@
 <img src="https://c.pxhere.com/photos/be/ba/seychelles_sea_ocean_holiday_recreation_bathing_trees_water-438091.jpg!d" style="width: 100%;" alt="Description of the image">
 <p class="about-us-title">Touch-Grass Vacations</p>
 
-    <div clas = "text-left">
+    <div clas = "text-left"> 
         <p>
             Our Aventure of creating the lucrative oportunity for everyone to enjoy their dream holidays started just a few weeks ago, when we got the assignement to create a website using php.
             We saw a problem in our current world, vacations can be very expensive and there are also just too much to choose from. How is that acceptable? We spent the next few weeks building our empire, erecting hotels all over the world in warm as well as cold climates.
@@ -19,7 +19,7 @@
 
         <p>Kilian Gross (head of finances)</p>
         <p>
-            As creating this company and building all our hotels is not a cheap task, we are glad Kilian could manage our finances to such great succes, that we ended up with profit after all the constructions were done. Where this money he provides comes from, one could only suspect, but going down that rabbit hole can have dire consequences.
+            As creating this company and building all our hotels is not a cheap task, we are glad Kilian could manage our finances to such great succes, that we even ended up with profit after all the constructions were done. Where this money he provides comes from, one could only suspect, but going down that rabbit hole can have dire consequences.
 
         </p>
 
@@ -30,7 +30,7 @@
 
         <p>Vladislav Lezov (head of human rights and construction)</p>
         <p>
-            As we are a very humain company, the lifes and wellbeeing of our workers and local communities at our hotels are one of our top priorities, at least sometimes. Vladislav, our head of human rights and constroction oversees the whole building process of our numerous hotels. Our workers are paid fair and work under great working conditions, this he swears by his name.
+            As we are a very humain company, the lifes and wellbeeing of our workers and local communities at our hotels are one of our top priorities, at least sometimes. Vladislav, our head of human rights and construction oversees the whole building process of our numerous hotels. Our workers are paid fair and work under great working conditions, this he swears by his name.
         </p>
     </div>
     
