--- a/components/Infotext.html
+++ b/components/Infotext.html
@@ -1,33 +1,35 @@
 <link rel="stylesheet" href="css/Texts_hp2.css">
 <Infotext>
 
-    <Info> <p>We at Touch-Grass vacations believe that every individual, no matter their wealth or social status, deserves the right vacations they desire. </p>
-        <p>We provide a great variety of options for your perfect break from the everyday stress.</p>
-        <p>We assure you that you can reach your ideal destination </p>
-        <p>and it's just one click away.</p>
-        </Info>
+    <br>
+    <br>
 
-        <nav2>
-            <a href="" class="nav2-links" draggable="false">Book now</a>
-        </nav2>
+    <div class = "info-text">
+        <p>We at Touch-Grass vacations believe that every individual, no matter their wealth or social status, deserves the right vacations they desire. We provide a great variety of options for your perfect break from the everyday stress.We assure you that you can reach your ideal destination and it's just one click away.</p>
+    </div>
+
+    <br>
+
+    <nav2>
+        <a href="" class="nav2-links" draggable="false">Book now</a>
+    </nav2>
         
-        <div class="image-container">
-            <img src="resources/homepage.jpg" style="width: 30vw;" alt="Description of the image">
-          </div>
+    <div class="image-container">
+        <img src="resources/homepage.jpg" style="width: 30vw;" alt="Description of the image">
+    </div>
 
-        <Info>
-            <p>Our founding team of four has founded the company with the goal to provide the best vacations there are.</p>
-            <p>Around the world we have build hotels to offer a great range of locations so everyone should find their need met in some way. This was only possible</p>
-            <p>because of our numerous sponsors, the great support, underpaid child workers and our will to not give up. </p>
-            <p>To learn more about our journey, click below.</p>
-            </Info>
+    <div class = "info-text">
+        <p>Our founding team of four has founded the company with the goal to provide the best vacations there are. Around the world we have build hotels to offer a great range of locations so everyone should find their need met in some way. This was only possible because of our numerous sponsors, the great support, underpaid child workers and our will to not give up. To learn more about our journey, click below.</p>
+    </div>
 
-        <nav2>
-            <a href="./about-us.php" draggable="false">About us</a>
-        </nav2>
-        <div class="image-container">
-            <img src="resources/HomepageImage.jpg" style="width: 30vw;" alt="Description of the image">
-          </div>
+    <br>
+
+    <nav2>
+        <a href="./about-us.php" draggable="false">About us</a>
+    </nav2>
+
+    <br><br><br>    <br><br><br>    <br><br><br>    <br><br><br>    
+
         
 
 </Infotext>
