--- a/css/Texts_hp2.css
+++ b/css/Texts_hp2.css
@@ -1,32 +1,25 @@
 
 @import "./globals.css";
 
-Info {
-    top: 5rem;
-    bottom: 5rem;
-    text-align: center;
-    position: relative;
-    width: 50vw;
-    height: 56px;
-    line-height: 56px;
-    padding: 20px 0;
-    border-top: 2px solid rgb(120,120,120);
-    border-bottom: 2px solid rgb(120,120,120);
-    font-weight: bold;
-    font-size: 10;
+
+    .info-text{
+        padding-left: 20%;
+        width: 60%;
+        position: relative;
+        display: flex;
+        text-align: center;
+        font-size: 1.5rem;
     }
+
 
     nav2 {
         margin: 5rem;
-        left:25%;
-        text-align: center;
-        position: relative;
-        width: 50vw;
-        height: 56px;
+        margin-left: 45%;
+        text-align: justify;
+        font-size:3rem;
         border-top: 2px solid rgb(120,120,120);
         border-bottom: 2px solid rgb(120,120,120);
-        display: flex;
-        align-items: center;
+
     }
     
     .nav2-links {
@@ -44,5 +37,6 @@ Info {
     .image-container {
         display: flex;
         justify-content: center;
-        margin-top: 10rem; 
+        margin-top: 5rem; 
+        margin-bottom: 5rem; 
       }
