Added link to KBW website

--- a/components/footer.html
+++ b/components/footer.html
@@ -5,7 +5,7 @@
             <p>+41 52 434 54 11</p>
             <p>reisebüro-noscam@gmail.com</p>
             <p>founded 01.03.2024</p>
-            <p>KBW, EF Informatik 2024</p>
+            <p><a href="https://www.kbw.ch/">KBW</a>, EF Informatik 2024</p>
             <p>Andrin Halbeisen, Kilian Gross, Niklas Egger, Vladislav Lezov</p>
         </div>
     </footertexts>
