--- a/components/Infotext.html
+++ b/components/Infotext.html
@@ -25,7 +25,7 @@
     <br>
 
     <nav2>
-        <a href="./about-us.php" draggable="false">About us</a>
+        <a href="./about-us.php" class="nav2-links" draggable="false">About us</a>
     </nav2>
 
     <br><br><br>    <br><br><br>    <br><br><br>    <br><br><br>    
