Updated formating and added video

--- a/components/Infotext.html
+++ b/components/Infotext.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="css/Texts_hp2.css">
-<Infotext>
+<div class="infotext-container">
 
     <br>
     <br>
@@ -16,6 +16,10 @@
         
     <div class="image-container">
         <img src="resources/homepage.jpg" style="width: 30vw;" alt="Description of the image">
+        <video controls>
+            <source src="resources/homepage_slideshow/Slide_video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video> 
     </div>
 
     <div class = "info-text">
@@ -32,4 +36,4 @@
 
         
 
-</Infotext>
+</div>
