--- a/css/Texts_hp2.css
+++ b/css/Texts_hp2.css
@@ -1,9 +1,14 @@
 
 @import "./globals.css";
 
+    .infotext-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2.5rem;
+    }
 
     .info-text{
-        padding-left: 20%;
         width: 60%;
         position: relative;
         display: flex;
@@ -13,13 +18,12 @@
 
 
     nav2 {
-        margin: 5rem;
-        margin-left: 45%;
-        text-align: justify;
+        width: 16rem;
+        text-align: center;
         font-size:3rem;
         border-top: 2px solid rgb(120,120,120);
         border-bottom: 2px solid rgb(120,120,120);
-
+        margin-bottom: 6rem;
     }
     
     .nav2-links {
@@ -36,7 +40,12 @@
 
     .image-container {
         display: flex;
-        justify-content: center;
-        margin-top: 5rem; 
-        margin-bottom: 5rem; 
+        flex-direction: column;
+        align-items: center;
+        gap: 6rem;
       }
+
+video {
+    width: 80rem;
+    height: auto;
+}
