Fixed formating issues and add href to header and homepage

--- a/components/Infotext.html
+++ b/components/Infotext.html
@@ -11,7 +11,7 @@
     <br>
 
     <nav2>
-        <a href="" class="nav2-links" draggable="false">Book now</a>
+        <a href="./hotel_selection.php" class="nav2-links" draggable="false">Book now</a>
     </nav2>
         
     <div class="image-container">
