--- a/components/header.html
+++ b/components/header.html
@@ -2,7 +2,7 @@
 <header>
     <img src="resources/logo.png" alt="Logo" class="logo" draggable="false" onclick="window.location.href = './'">
     <nav>
-        <a href="" class="nav-links" draggable="false">Book now</a>
+        <a href="./hotel_selection.php" class="nav-links" draggable="false">Book now</a>
         <a href="./about-us.php" class="nav-links" draggable="false">About us</a>
         <div>
             <p>+41 52 434 54 11</p>
