--- a/css/globals.css
+++ b/css/globals.css
@@ -1,10 +1,12 @@
 :root {
     --header-size: max(15vh, 6rem);
     --accent-color: rgb(0, 85, 141);
+    --background-color: rgb(221, 234, 238);
 }
 
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: var(--background-color);
 }
